<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/app_logo_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_as_a_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv" />

    <include
        android:id="@+id/linear_layout1"
        layout="@layout/sign_up_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_register"
        android:visibility="gone"/>


    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radio_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_as_an_existing_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout1" />

    <include
        android:id="@+id/linear_layout2"
        layout="@layout/sign_in_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_login"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>